--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                     <div class="pic">
                         <img src="image/lex.png" alt="Alex">
                      </div>
-                        <p class="name"><span>Victor Crest</span> 26</p>
+                        <p class="name"><span>Alexis Ehis</span> 26</p>
                         <p class="location">London</p>
                 </div>
                     <div class="status">
